# platito

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: sample.yaml  train.yaml
configs/callbacks/: default.yaml  lr_monitor.yaml  model_checkpoint_steps.yaml
configs/data/: mdcath.yaml
configs/data/mdcath_names/: under_200res.yaml  under_200res_no_similarity.yaml
configs/logger/: wandb.yaml
configs/model/: platito.yaml
configs/model/fm/: r3n_fm.yaml
configs/model/lr_scheduler/: reduce_on_plateau.yaml  step.yaml
configs/model/nn/: condition.yaml  proteina_base.yaml  velocity.yaml
configs/paths/: default.yaml
configs/trainer/: default.yaml
data/fast_folders/: temperatures.json
docs/: index.html
docs/static/css/: index.css
notebooks/: equilibrium_sampling.ipynb  estimate_tica.ipynb  extract_sequence_embeddings.ipynb
platito/data/: __init__.py  constants.py  framedata.py  mdcath_datamodule.py  mdcath_dataset.py
platito/models/: __init__.py  lightning_module.py
platito/models/fm/: __init__.py  r3n_fm.py
platito/models/nn/: __init__.py  proteina_transformer.py
platito/models/nn/alphafold3_pytorch_utils/: __init__.py  modules.py
platito/models/nn/proteina_blocks/: __init__.py  feature_factory.py  ff_utils.py  pair_bias_attn.py
platito/models/solvers/: __init__.py  ode_solver.py
platito/utils/: amino_acid_vocab.py  bioemu_utils.py  hydra_utils.py  tica_utils.py
scripts/: prepare_mdcath.py  sample.py  train.py  visualize_trajectory.py
